update website content

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -63,6 +63,7 @@
 
   img {
     width: 100%;
+    max-width: 200px;
 
     &.emoji {
       width: 20px;
@@ -179,6 +180,8 @@
 
 .author__bio {
   margin: 0;
+  font-size: 0.9em;
+  font-style: italic;
 
   @include breakpoint($large) {
     margin-top: 10px;
