adjust image size

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -62,8 +62,8 @@
   }
 
   img {
-    width: 100%;
-    max-width: 200px;
+    //width: 100%;
+    max-width: 400px;
 
     &.emoji {
       width: 20px;
