--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,3 +7,8 @@ search: false
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+.page__content {
+    font-size: 18px; /* Adjust the font size as needed */
+}
+
