--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,7 @@ search: false
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
+# font size of pages, overwrites other css settings
 html {
   font-size: 12px; // change to whatever
 
