Update main.scss and fontsizes

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,19 +8,19 @@ search: false
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
-# font size of pages, overwrites other css settings
+// font size of pages, overwrites other css settings
 html {
-  font-size: 12px; // change to whatever
+  font-size: 10px; // change to whatever
 
   @include breakpoint($medium) {
-    font-size: 14px; // change to whatever
+    font-size: 12px; // change to whatever
   }
 
   @include breakpoint($large) {
-    font-size: 16px; // change to whatever
+    font-size: 14px; // change to whatever
   }
 
   @include breakpoint($x-large) {
-    font-size: 18px; // change to whatever
+    font-size: 16px; // change to whatever
   }
 }
