--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,41 +8,52 @@ search: false
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
-// font size of pages, overwrites other css settings
+
+/*
+Override any CSS with new CSS styles AFTER the `@import "minimal-mistakes";` line just above.
+See https://github.com/mmistakes/minimal-mistakes/issues/1219#issuecomment-326809412
+Anything you place after this point will therefore "cascade and override" the previous CSS styles.
+*/
+
+/*
+Decrease font sizes of the entire website.
+Default values for small, medium, large, and x-large screens are: 16, 18, 20, and 22px. 
+All other font sizes are "em" [typography unit](https://en.wikipedia.org/wiki/Em_(typography)) multipliers of these pixel (px) values, 
+and are therefore relative to and changed by these singular pixel values.
+See: https://github.com/mmistakes/minimal-mistakes/issues/1219#issuecomment-326809412
+- It looks like the screen pixel sizes to move into each new "size" category are defined in
+  the "Breakpoints" section of "_variables.scss"?
+*/
 html {
   font-size: 10px; // change to whatever
-
   @include breakpoint($medium) {
     font-size: 12px; // change to whatever
   }
-
   @include breakpoint($large) {
     font-size: 14px; // change to whatever
   }
-
   @include breakpoint($x-large) {
     font-size: 16px; // change to whatever
   }
 }
 
+/*
+Change size of profile avatar in left sidebar
+*/
 @media (min-width: 80em) {
-
 .author__avatar {
   display: table-cell;
   vertical-align: top;
   width: 100px;
   height: 100px;
-
   @include breakpoint($large) {
     display: block;
     width: auto;
     height: auto;
   }
-
   img {
-    max-width: 175px;
+    max-width: 250px;
     border-radius: 50%;
-
     @include breakpoint($large) {
       padding: 5px;
       border: 1px solid $border-color;
