--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    {% include custom-head.html %}
 
     <!-- Google Search Console Verification -->
     <meta name="google-site-verification" content="_wDTYQrKjnW6igKUNMQFF1VRw_zqfj2lqvQ7levhw6g" />
