--- a/_includes/analytics-providers/google-gtag.html
+++ b/_includes/analytics-providers/google-gtag.html
@@ -1,3 +1,6 @@
+<!-- Google Analytics (gtag.js) with preconnect for performance -->
+<link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.analytics.google.tracking_id }}"></script>
 <script>
@@ -5,5 +8,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '{{ site.analytics.google.tracking_id }}', { 'anonymize_ip': {{ site.analytics.google.anonymize_ip | default: false }}});
+  gtag('config', '{{ site.analytics.google.tracking_id }}', { 
+    'anonymize_ip': {{ site.analytics.google.anonymize_ip | default: false }}
+  });
 </script>
