--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,2 +1,6 @@
 <!-- SEO tags -->
 {% seo %}
+<!-- Google Analytics tracking ID -->
+{% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+{% endif %}
