--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -61,3 +61,37 @@ Change size of profile avatar in left sidebar
   }
 }
 }
+
+
+// Accessibility code snippets
+code { padding: .25em .5em; font-size: 85%; color: #C04343; background-color: #F9F9F9; border-radius: 3px; }
+/* Literal.Number */
+.highlight .s { color: #C04343; }
+/* Literal.String */
+.highlight .na { color: #8B38D1; }
+/* Name.Function */
+.highlight .nl { color: #4467E9; }
+/* Name.Namespace */
+.highlight .nt { color: #2771B9; }
+/* Literal.Number */
+.highlight .m { color: #A46123; }
+/* Text.Whitespace */
+.highlight .mf { color: #A46123; }
+/* Literal.Number.Float */
+.highlight .mh { color: #A46123; }
+/* Literal.Number.Hex */
+.highlight .mi { color: #A46123; }
+/* Literal.Number.Integer */
+.highlight .mo { color: #A46123; }
+/* Name.Attribute */
+.highlight .nb { color: #4E7450; }
+
+.highlight .n  { color: #4E7450; }
+/* Comment.Preproc */
+.highlight .c1 { color: #707070; }
+/* Comment.Single */
+.highlight .cs { color: #707070; }
+
+.highlight .c  { color: #707070; }
+/* Name.Builtin */
+.highlight .nc { color: #008538; }
