--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -117,7 +117,7 @@ code { padding: .25em .5em; font-size: 85%; color: #C04343; background-color: #F
 
 /* Increase width of content area */
 .page__content {
-    max-width: 1000px; /* Adjust this value as needed */
+    max-width: 1100px; /* Adjust this value as needed */
     margin-left: auto;
     margin-right: auto;
 }
@@ -126,4 +126,10 @@ code { padding: .25em .5em; font-size: 85%; color: #C04343; background-color: #F
 .author__avatar {
     width: 150px; /* Adjust if needed */
     height: 150px; /* Adjust if needed */
+}
+
+@media screen and (min-width: 1200px) {
+    .page__content {
+        max-width: 80%; /* Span 80% of the page width */
+    }
 }
