--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -98,21 +98,28 @@ code { padding: .25em .5em; font-size: 85%; color: #C04343; background-color: #F
 
 
 
+
 /* Increase width of content area */
 .page__content {
-    max-width: 1500px; /* Adjust this value as needed */
+    max-width: 90%; /* Change to 90% of the screen width */
     margin-left: auto;
     margin-right: auto;
+}
+
+@media screen and (min-width: 1200px) {
+    .page__content {
+        max-width: 90%; /* Maintain 90% width for larger screens */
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .page__content {
+        max-width: 95%; /* Ensure it's also responsive for smaller screens */
+    }
 }
 
 /* Make sure sidebar and content area align well */
 .author__avatar {
     width: 150px; /* Adjust if needed */
     height: 150px; /* Adjust if needed */
-}
-
-@media screen and (min-width: 1200px) {
-    .page__content {
-        max-width: 100%; /* Span 80% of the page width */
-    }
 }
