--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -64,7 +64,7 @@ Change size of profile avatar in left sidebar
 
 
 // Accessibility code snippets
-code { padding: .25em .5em; font-size: 85%; color: #C04343; background-color: #F9F9F9; border-radius: 3px; }
+//code { padding: .25em .5em; font-size: 85%; color: #C04343; background-color: #F9F9F9; border-radius: 3px; }
 /* Literal.Number */
 .highlight .s { color: #C04343; }
 /* Literal.String */
