--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,3 +3,8 @@
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <!-- end custom head snippets -->
+<!-- Academicons (for the arXiv icon) -->
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/academicons/css/academicons.min.css"
+/>
